# gridgpt

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  railway.json  requirements.txt  run_api.py  vercel.json
api/: __init__.py  main.py  requirements.txt  routes.py
conf/base/: catalog.yml  parameters.yml  prompts.yml
data/02_intermediary/word_database/: word_database_all.json  word_database_filtered_by_length.json  word_database_filtered_list.json  word_database_full.json
data/03_templates/: grid_templates.json
docs/: backlog.md  evaluation.md
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/crossword/: route.ts
frontend/src/app/api/templates/: route.ts
frontend/src/components/: crossword-generator.tsx
frontend/src/components/ui/: collapsible-about.tsx  grid-preview.tsx  info-tooltip.tsx
frontend/src/lib/: colors.ts  types.ts  utils.ts
notebooks/: 01_backend_walkthrough.ipynb  01_extract_examples.ipynb  02_development.ipynb  02_extract_examples.ipynb  03_algorithm_comparison.ipynb  04_theme_weighted_fill.ipynb  05_multi_anchor_theme_entries.ipynb
scripts/: create_crosswordtracker_word_db.py  create_word_db.py  create_worddb_database.py  evaluate_generation.py  evaluate_themes.py  extract_all_examples.py  precompute_embeddings.py  refresh_database.py  scrape_crosswords.py  scrape_crosswords_2.py  scrape_crosswordtracker.py  scrape_worddb.py
src/gridgpt/: clue_generator.py  clue_manager.py  crossword_builder.py  crossword_generator.py  crossword_generator_legacy.py  crossword_scraper.py  crosswords.py  embedding_provider.py  extract_examples.py  llm_connection.py  template_manager.py  theme_anchor.py  theme_manager.py  utils.py  word_database.py  word_database_manager.py
src/scraper/: crosswordtracker.py  worddb.py
src/word_database/: crossword_tracker.py  worddb.py
tests/: conftest.py  test_api.py  test_clue_manager.py  test_crossword_generator.py  test_embedding_provider.py  test_template_manager.py  test_theme_anchor.py  test_theme_manager.py  test_word_database_manager.py
