[project]
name = "gridgpt"
version = "0.1.0"
description = "A smart mini crossword generator powered by GPT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Marie" }]

dependencies = [
    "pandas",
    "numpy",
    "ipykernel",
    "pyyaml==6.0.2",
    "openai>=1.3.0",
    "pytest>=7.4.0",
    "black",
    "isort",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",

    # FastAPI and related dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",

    # Optional: for testing FastAPI endpoints
    "httpx>=0.25.0",
]
