[project]
name = "gridgpt"
version = "0.1.0"
description = "A smart mini crossword generator powered by GPT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Marie" }]

# Runtime dependencies: everything the deployed backend needs (nothing more)
# This is what `uv sync --no-dev` installs on Railway.
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pandas",
    "numpy",
    "pyyaml==6.0.2",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "wordfreq>=3.1.1",
]

# Local-only tooling: tests, formatters, notebook kernel, and the scrapers
# (beautifulsoup4 is used by src/scraper, which only runs via `make refresh-db`).
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black",
    "isort",
    "ipykernel",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
# Install dependencies only. The code imports via `src.` on sys.path (see the
# sys.path.append in api/routes.py and scripts/*), so there is nothing to build.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
